# fast-penguin

./: .gitignore  README.md  pyproject.toml  server.py  upload_to_turbopuffer.py
wiki-search-frontend/: package-lock.json  package.json
wiki-search-frontend/src/routes/: +page.svelte
wiki-search-frontend/src/routes/api/search/: +server.js
