[project]
name = "fast-penguin"
version = "0.1.0"
description = "A project combining Svelte frontend with a Python backend for semantic search."
authors = [
    {name = "Your Name", email = "you@example.com"}, # TODO: Update with your details
]
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "nomic",
    "sentence-transformers",
    "einops"
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
